--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,32 +1,44 @@
-body{ 
+body{ margin-right: 10%;
+	  margin-left: 10%;
 }
 
 
-h1 {background-color: #9370DB;
-	 font-family: Lucida Handwriting;
+h1 {background-color: #01DFD7;
+	font-family: Lucida Handwriting;
     font-size: 150px;
-    text-align: center;   
+    text-align: center; 
+
 }
  
 p {font-family: Times New Roman;
    font-size: 25px;
    text-align: justify;
-   
-}
+   font-weight: bold;
+   }
 
 h2{font-family:Times New Roman;
 	font-size: 30px;
 	text-align: justify;
+	font-weight: bolder;
 
 }
 
 h3 { font-family:Times New Roman;
 	 font-size: 25px;
 	 text-align: justify;
-
+	 font-weight: bolder;
+     background-color: #FFFFFF;
 }
 ul li {font-family:Times New Roman;
 	   font-size: 25px;
 	   text-align: justify;
 	   background-color: #F5A9BC;
+}
+
+figure{ text-align: left;
+
+}
+
+img { width: 10%;
+
 }
