--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,12 +1,13 @@
 body{ margin-right: 10%;
-	  margin-left: 10%;
+	   margin-left: 10%;
 }
 
 
-h1 {background-color: #01DFD7;
-	font-family: Lucida Handwriting;
+h1 {background-color: #0489B1;
+	 font-family: Lucida Handwriting;
     font-size: 150px;
     text-align: center; 
+    color: white;
 
 }
  
@@ -14,31 +15,46 @@ p {font-family: Times New Roman;
    font-size: 25px;
    text-align: justify;
    font-weight: bold;
-   }
+   background-color: white;
+}
 
 h2{font-family:Times New Roman;
 	font-size: 30px;
 	text-align: justify;
 	font-weight: bolder;
+	background-color: white;
 
 }
 
 h3 { font-family:Times New Roman;
-	 font-size: 25px;
-	 text-align: justify;
-	 font-weight: bolder;
+	  font-size: 25px;
+	  text-align: justify;
+	  font-weight: bolder;
      background-color: #FFFFFF;
 }
+
+h4{ font-family:  Lucida Handwriting;
+	 font-size: 20px;
+	 text-align: center;
+	 font-weight: bolder;
+	 background-color: #0489B1;
+}
+
+h5 { font-family:  Lucida Handwriting;
+	  font-size: 20px;
+	  text-align: center;
+	  font-weight: bolder;
+	  background-color: #FA5858;
+
+}
+
+
 ul li {font-family:Times New Roman;
 	   font-size: 25px;
 	   text-align: justify;
 	   background-color: #F5A9BC;
 }
 
-figure{ text-align: left;
-
-}
-
-img { width: 10%;
-
-}
+img{ width: 15%;
+	  text-align: justify;
+	}
